--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -94,11 +94,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4352539002'>Job Application for Speech Language Pathologist (SLP) Full- Time at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4352539002'>Job Application for Speech Language Pathologist (SLP) Full- Time at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4359004002'>Job Application for Speech Language Pathologist (SLP), Senior Living at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4359004002'>Job Application for Speech Language Pathologist (SLP), Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p>Jul 9, 2019 ... We are committed to making a positive difference in the lives of those we serve. 
 As a physical, occupational, or speech therapist, we will provide you with all the?...</p>
 <hr/>
-<h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-cfy-2093'>Speech Pathologist-CFY - Loma Linda University Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-cfy-2093'>Speech Pathologist-CFY - Loma Linda University Careers Careers</a></h5> 
 <p><span class="badge badge-light">Loma Linda, California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -205,7 +205,7 @@ re new. Yet extremely experienced. Isn't that what driven, curious, passionate?.
 <p>Jun 30, 2019 ... Senior LIFE Reading is now hiring a Speech Language Pathologist - Reading in 
 Reading, Pennsylvania. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kippsocal/c227d96b-0ffa-4f7b-9705-9fc1f4e15791'>KIPP SoCal Public Schools - Speech & Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kippsocal/c227d96b-0ffa-4f7b-9705-9fc1f4e15791'>KIPP SoCal Public Schools - Speech & Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 1, 2019 ... Speech & Language Pathologist. Los Angeles, CA. School Support ? Special 
 Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
@@ -218,7 +218,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UncommonSchools/743999691511538-speech-and-language-pathologist'>Uncommon Schools Speech and Language Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UncommonSchools/743999691511538-speech-and-language-pathologist'>Uncommon Schools Speech and Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -241,7 +241,7 @@ Language Pathologist - SLP - PRN - Home Health in Watertown, Wisconsin.</p>
 Pathologist (SLP)- $5000 Bonus in Berlin, New Hampshire. Review all of the job 
 details?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -321,7 +321,7 @@ details?...</p>
 <p><span class="badge badge-light">Montgomery</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://stjhs.referrals.selectminds.com/jobs/pediatric-outpatient-speech-language-pathologist-40551'>Pediatric Outpatient Speech Language Pathologist - St. Joseph Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stjhs.referrals.selectminds.com/jobs/pediatric-outpatient-speech-language-pathologist-40551'>Pediatric Outpatient Speech Language Pathologist - St. Joseph Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -354,7 +354,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691120391-speech-language-pathologist-slp-needed-for-home-health-in-tehachapi'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Tehachapi | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691120391-speech-language-pathologist-slp-needed-for-home-health-in-tehachapi'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Tehachapi | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -366,7 +366,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bricknewark/ad158d80-cd1b-4324-923c-7ce7825647ea'>BRICK Education Network - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bricknewark/ad158d80-cd1b-4324-923c-7ce7825647ea'>BRICK Education Network - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -378,7 +378,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -406,7 +406,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='http://phoebeministries.applytojob.com/apply/epwQTJnA6u/Physical-Occupational-And-Speech-Therapist-Per-Diem-Allentown'>Physical. Occupational, and Speech Therapist - Per Diem - Allentown - Phoebe Ministries - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://phoebeministries.applytojob.com/apply/epwQTJnA6u/Physical-Occupational-And-Speech-Therapist-Per-Diem-Allentown'>Physical. Occupational, and Speech Therapist - Per Diem - Allentown - Phoebe Ministries - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -426,7 +426,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-lhcgroup.icims.com/jobs/59086/speech-therapist---slp---home-health-%28prn%29/job?in_iframe=1'>Speech Therapist / SLP - Home Health (PRN) in Brookfield, Wisconsin | Careers at Wisconsin Home Health</a></h5> 
+<h5><a href='https://careers-lhcgroup.icims.com/jobs/59086/speech-therapist---slp---home-health-%28prn%29/job?in_iframe=1'>Speech Therapist / SLP - Home Health (PRN) in Brookfield, Wisconsin | Careers at Wisconsin Home Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-27</p>
 <hr/>
